--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.2",
+    "@syncfusion/ej2-angular-inputs": "^24.2.7-ngcc",
     "angular2-text-mask": "^9.0.0",
     "express": "^4.18.2",
+    "ngx-color-picker": "^16.0.0",
+    "ngx-colors": "^3.5.3",
     "ngx-mask": "^17.0.4",
+    "primeng": "^17.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
